plplot (5.2.1.cvs.20031231-2) unstable; urgency=low

  * NOT YET RELEASED!
  * debian/control: Added pkg-config to build-dependencies and to
    libplplot-dev Recommends:.

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 31 Dec 2003 19:20:52 +0100

plplot (5.2.1.cvs.20031231-1) unstable; urgency=low

  * New cvs snapshot upstream release
  * debian/control: Changed section of packages libplplot9,
    plplot9-driver-gd, plplot9-driver-gnome, and plplot9-driver-xwin to
    libs (was math before) in order to comply with overrides of
    debian-installer.
  * debian/plplot-tcl.files: Include directories and files
    usr/share/plplot*/*tcl

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 31 Dec 2003 14:12:22 +0100

plplot (5.2.1.cvs.20031228-1) unstable; urgency=low

  * New cvs snapshot upstream release

 -- Rafael Laboissiere <rafael@debian.org>  Sun, 28 Dec 2003 22:33:41 +0100

plplot (5.2.1.cvs.20031227-1) unstable; urgency=low

  * New cvs snapshot upstream release.

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 27 Dec 2003 01:52:55 +0100

plplot (5.2.1.cvs.20031226-1) unstable; urgency=low

  * New cvs snapshot upstream release.

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 26 Dec 2003 16:48:05 +0100

plplot (5.2.1.cvs.20031030-2) unstable; urgency=low

  * debian/rules: Call configure with --enable-static, such that the
    lib*.a files will be present in the *-dev packages (closes: #224550).
  * debian/control: Changed architecture of packages libplplot-dev and
    plplot-tcl-dev from "all" to "any", because of the *.a files included.

 -- Rafael Laboissiere <rafael@debian.org>  Sat, 20 Dec 2003 17:48:52 +0100

plplot (5.2.1.cvs.20031030-1) unstable; urgency=low

  * Preparation for the next upstream version, which changed the soversion
    of the PLplot library.  Changed all the references to libplplot5 to
    libplplot9.  Affected files:
    - debian/control
    - debian/libplplot-dev.files
    - debian/octave-plplot.files